--- a/src/app/components/authentication/login/login.component.html
+++ b/src/app/components/authentication/login/login.component.html
@@ -1,1 +1,27 @@
-<p>login works!</p>
+<div class="login-container" fxLayout="row" fxLayoutAlign="center center">
+    <mat-card class="login-card">
+        <mat-card-header>
+            <div>
+                <h1>Hey, Welcome. Login to access Task Management</h1>
+            </div>
+        </mat-card-header>
+        <mat-card-content>
+            <div fxLayout="column">
+                <mat-form-field appearance="outline">
+                    <mat-label>Email</mat-label>
+                    <input matInput placeholder="Enter your Email here">
+                    <!-- <mat-icon matPrefix>account_circle</mat-icon> -->
+                </mat-form-field>
+                <mat-form-field appearance="outline">
+                    <mat-label>Password</mat-label>
+                    <input matInput placeholder="Enter your password" [type]="hide ? 'password' : 'text'">
+                    <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
+                </mat-form-field>
+            </div>
+        </mat-card-content>
+        <mat-card-actions fxLayout="column" fxLayoutGap="8px" fxLayoutAlign="center center">
+            <button mat-raised-button color="primary">Login</button>
+            <span>Not a Member yet ? <a routerLink="/signup">Sign up</a></span>
+        </mat-card-actions>
+    </mat-card>
+</div>
