--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar>
+<mat-toolbar *ngIf="user">
     <button mat-stroked-button color="primary" (click)="logout()">Logout</button>    
 </mat-toolbar>
