removed sidenav since less action buttons

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -4,4 +4,11 @@
 
 .container {
     padding: 32px 0px;
+    height: calc(100vh - 64px);
+}
+
+.add-button {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
 }
