--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,10 +1,11 @@
-<div class="full-height" fxLayout="row">
-    <app-side-nav fxFlex="5" fxFlex.xs="20" fxFlex.sm="10"></app-side-nav>
-    <div fxFlex="95" fxFlex.xs="80" fxFlex.sm="90" class="container">
-        <div fxLayout="row wrap" fxLayoutGap="32px" fxLayoutAlign="center">
-            <div fxFlex="20" fxFlex.md="25" fxFlex.sm="50" fxFlex.xs="100"  class="task" *ngFor="let task of taskList">
-                <app-task [task]="task"></app-task>
-            </div>
+<div class="container">
+    <div fxLayout="row wrap" fxLayoutGap="16px" fxLayoutAlign="center">
+        <div fxFlex="20" fxFlex="0 1 calc(25% - 32px)" fxFlex.lt-md="0 1 calc(33.3% - 32px)" fxFlex.lt-sm="100%"
+            class="task" *ngFor="let task of taskList">
+            <app-task [task]="task"></app-task>
         </div>
     </div>
 </div>
+<button class="add-button" mat-fab color="primary" (click)="createTask()" aria-label="Add Task">
+    <mat-icon>add</mat-icon>
+</button>
