delete task feature added

--- a/src/app/components/authentication/signup/signup.component.html
+++ b/src/app/components/authentication/signup/signup.component.html
@@ -25,7 +25,7 @@
                         <mat-error *ngIf="signupFormGroup.controls['email'].hasError && !signupFormGroup.controls['email'].hasError('required')">
                             Please enter a valid email address
                           </mat-error>
-                        <!-- <mat-icon matPrefix>account_circle</mat-icon> -->
+                        <mat-icon matPrefix>account_circle</mat-icon>
                     </mat-form-field>
                     <mat-form-field  appearance="outline">
                         <mat-label>Password</mat-label>
