--- a/src/app/components/task/task.component.html
+++ b/src/app/components/task/task.component.html
@@ -8,7 +8,7 @@
         </p>
     </mat-card-content>
     <mat-card-actions>
-        <!-- <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button> -->
+        <button mat-button (click)="editTask()">Edit</button>
+      <button mat-button (click)="deleteTask()">Delete</button>
     </mat-card-actions>
 </mat-card>
