--- a/src/app/components/authentication/signup/signup.component.html
+++ b/src/app/components/authentication/signup/signup.component.html
@@ -14,7 +14,7 @@
                         <mat-error *ngIf="signupFormGroup.controls['name'].hasError('required')">
                             Name is <strong>required</strong>
                         </mat-error>
-                        <!-- <mat-icon matPrefix>account_circle</mat-icon> -->
+                        <mat-icon color="primary" matPrefix>account_circle</mat-icon>
                     </mat-form-field>
                     <mat-form-field  appearance="outline">
                         <mat-label>Email</mat-label>
@@ -25,7 +25,7 @@
                         <mat-error *ngIf="signupFormGroup.controls['email'].hasError && !signupFormGroup.controls['email'].hasError('required')">
                             Please enter a valid email address
                           </mat-error>
-                        <mat-icon matPrefix>account_circle</mat-icon>
+                        <mat-icon color="primary" matPrefix>email</mat-icon>
                     </mat-form-field>
                     <mat-form-field  appearance="outline">
                         <mat-label>Password</mat-label>
@@ -33,6 +33,7 @@
                         <mat-error *ngIf="signupFormGroup.controls['password'].hasError('required')">
                             Password is <strong>required</strong>
                         </mat-error>
+                        <mat-icon color="primary" matPrefix>lock</mat-icon>
                         <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
                     </mat-form-field>
                 </div>
