--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="container">
-    <div class="full-height" fxLayout="row wrap" fxLayoutGap="16px" fxLayoutAlign="center flex-start">
-        <div fxFlex="20" fxFlex="0 1 calc(25% - 32px)" fxFlex.lt-md="0 1 calc(33.3% - 32px)" fxFlex.lt-sm="100%"
+    <div class="full-height" fxLayout="row wrap" fxLayoutGap="16px" fxLayoutAlign.xs="center flex-start" fxLayoutAlign="flex-start flex-start">
+        <div fxFlex="20" fxFlex.xs="0 1 calc(100% - 32px)" fxFlex="0 1 calc(25% - 32px)" fxFlex.sm="0 1 calc(50% - 32px)" fxFlex.lt-md="0 1 calc(33.3% - 32px)"
             class="task" *ngFor="let task of taskList">
             <app-task [task]="task"></app-task>
         </div>
-        <div fxFlex="20" fxFlex="0 1 calc(25% - 32px)" fxFlex.lt-md="0 1 calc(33.3% - 32px)" fxFlex.lt-sm="100%"
+        <div fxFlex="20" fxFlex="0 1 calc(25% - 32px)" fxFlex.lt-md="0 1 calc(33.3% - 32px)" fxFlex.lt-sm="0 1 calc(100% - 32px)"
         class="task" *ngFor="let user of userList">
         <app-user [user]="user"></app-user>
         </div>
