--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,17 +1,19 @@
 <div class="login-container" fxLayout="column" fxLayoutAlign="center center">
-    <div class="full-width" fxLayout="row" fxLayoutAlign="flex-end">
-        <button mat-icon-button (click)="closeDialog()">
-            <mat-icon>close</mat-icon>
-        </button>
-    </div>
-    <div>
-        <h1>Hey, You can Add your Task Here</h1>
+    <div class="full-width">
+        <div class="full-width" fxLayout="row" fxLayoutAlign="flex-end">
+            <button color="primary" mat-mini-fab (click)="closeDialog()">
+                <mat-icon>close</mat-icon>
+            </button>
+        </div>
+        <div>
+            <h1>Hey, You can Add your Task Here</h1>
+        </div>
     </div>
     <form class="full-width" [formGroup]="createTaskFormGroup" (ngSubmit)="createTask()">
         <div fxLayout="column">
             <mat-form-field class="full-width" appearance="outline">
                 <mat-label>Title</mat-label>
-                <input required formControlName="title" matInput placeholder="Enter Task Title here">
+                <input autofocus required formControlName="title" matInput placeholder="Enter Task Title here">
                 <mat-error *ngIf="createTaskFormGroup.controls['title'].hasError('required')">
                     Title is <strong>required</strong>
                 </mat-error>
@@ -28,7 +30,7 @@
 
         </div>
         <div fxLayout="column" fxLayoutGap="8px" fxLayoutAlign="center center">
-            <button [disabled]="createTaskFormGroup.invalid" mat-raised-button color="primary">Create</button>
+            <button class="create-button" [disabled]="createTaskFormGroup.invalid" mat-raised-button color="primary">Create</button>
         </div>
     </form>
 </div>
