--- a/src/app/components/authentication/login/login.component.html
+++ b/src/app/components/authentication/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container" fxLayout="row" fxLayoutAlign="center center">
     <mat-card class="login-card">
-        <mat-card-header>
+        <mat-card-header class="card-header bg-primary">
             <div>
                 <h1>Hey, Welcome. Login to access Task Management</h1>
             </div>
@@ -10,6 +10,7 @@
                 <div fxLayout="column">
                     <mat-form-field appearance="outline">
                         <mat-label>Email</mat-label>
+                        <mat-icon color="primary" matPrefix>email</mat-icon>
                         <input required formControlName="email" matInput placeholder="Enter your Email here">
                         <mat-error *ngIf="loginFormGroup.controls['email'].hasError('required')">
                             Email is <strong>required</strong>
@@ -17,12 +18,12 @@
                         <mat-error *ngIf="loginFormGroup.controls['email'].hasError && !loginFormGroup.controls['email'].hasError('required')">
                             Please enter a valid email address
                           </mat-error>
-                        <!-- <mat-icon matPrefix>account_circle</mat-icon> -->
                     </mat-form-field>
                     <mat-form-field appearance="outline">
                         <mat-label>Password</mat-label>
+                        <mat-icon color="primary" matPrefix>lock</mat-icon>
                         <input required formControlName="password" matInput placeholder="Enter your password" [type]="hide ? 'password' : 'text'">
-                        <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
+                        <mat-icon color="primary" matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
                         <mat-error *ngIf="loginFormGroup.controls['password'].hasError('required')">
                             Password is <strong>required</strong>
                         </mat-error>
