--- a/src/app/components/task/task.component.scss
+++ b/src/app/components/task/task.component.scss
@@ -1,3 +1,10 @@
-.container {
-    min-height: 260px;
+mat-card {
+    min-height: 250px;
+    background-color: #d5d6da;
+}
+
+
+h2 {
+    font-weight: 800;
+    margin-bottom: 4px;
 }
