--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,19 +1,29 @@
-<mat-card class="container">
+<mat-card>
     <form class="full-width full-height" [formGroup]="createUserFormGroup" (ngSubmit)="updateUser()">
-        <span *ngIf="!isEditable"> <strong>Name: </strong> {{user.name}}</span>
+        <div *ngIf="!isEditable" fxLayout="row" fxLayoutAlign="flex-end" fxLayoutGap="8px">
+            <button mat-mini-fab class="fab-icon" (click)="editUser()">
+                <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-mini-fab color="warn" class="fab-icon" (click)="deleteUser()">
+                <mat-icon>delete</mat-icon>
+            </button>
+        </div>
+        <span *ngIf="!isEditable"> <h2> {{user.name}}</h2> </span>
         <mat-form-field *ngIf="isEditable" class="full-width" appearance="outline">
-            <mat-label>name</mat-label>
+            <mat-label>Name</mat-label>
+            <mat-icon color="primary" matPrefix class="mat-icon-pre">account_circle</mat-icon>
             <input [(ngModel)]="user.name" required formControlName="name" matInput
-                placeholder="Enter User's name here">
+            placeholder="Enter User's name here">
             <mat-error *ngIf="createUserFormGroup.controls['name'].hasError('required')">
                 Name is <strong>required</strong>
             </mat-error>
         </mat-form-field>
         <div fxLayout="column" fxLayoutAlign="space-between space-between" class="full-height">
-            <mat-card-content>
-                <p *ngIf="!isEditable">
-                    <strong> Email: </strong> {{user.email}}
-                </p>
+            <mat-card-content fxLayout="row" fxLayoutAlign="flex-start center" fxLayoutGap="8px">
+                <mat-icon *ngIf="!isEditable" color="primary">email</mat-icon>
+                <span *ngIf="!isEditable">
+                    {{user.email}}
+                </span>
                 <mat-form-field *ngIf="isEditable" class="full-width" appearance="outline">
                     <mat-label>Email</mat-label>
                     <input [(ngModel)]="user.email" required formControlName="email" matInput
@@ -25,12 +35,10 @@
                         *ngIf="createUserFormGroup.controls['email'].hasError && !createUserFormGroup.controls['email'].hasError('required')">
                         Please enter a valid email address
                     </mat-error>
-                    <mat-icon color="primary" matPrefix>email</mat-icon>
+                    <mat-icon color="primary" matPrefix class="mat-icon-pre">email</mat-icon>
                 </mat-form-field>
             </mat-card-content>
             <mat-card-actions>
-                <button *ngIf="!isEditable" mat-button (click)="editUser()">Edit</button>
-                <button *ngIf="!isEditable" mat-button (click)="deleteUser()">Delete</button>
                 <div *ngIf="isEditable" fxLayout="row" fxLayoutGap="8px" fxLayoutAlign="center center">
                     <button type="submit" [disabled]="createUserFormGroup.invalid || !this.createUserFormGroup.dirty"
                         mat-raised-button color="primary">Update</button>
